--- a/src/main/resources/bailAccountIdModifyPage.html
+++ b/src/main/resources/bailAccountIdModifyPage.html
@@ -83,15 +83,15 @@
         document.getElementById("instCode").value = "01430001";
         document.getElementById("bankCode").value = "30050000";
         //document.getElementById("txDate").value = getDate();
-		document.getElementById("txDate").value = "20150507";
+		document.getElementById("txDate").value = "";
         //document.getElementById("txTime").value = getTims();
         document.getElementById("txTime").value ="";
         document.getElementById("seqNo").value = "";
         document.getElementById("channel").value = "000001";
         document.getElementById("productId").value = "";
 		//document.getElementById("productId").value = "19020997221970270001";
-        document.getElementById("oldBailAccountId").value = "6212462330000000031";
-        document.getElementById("newBailAccountId").value = "6212462330005310930";
+        document.getElementById("oldBailAccountId").value = "";
+        document.getElementById("newBailAccountId").value = "";
         document.getElementById("forgotPwdUrl").value = "https://jerp2p.jx-bank.com/escrowll/p2p/page/passwordResetPage";
         document.getElementById("retUrl").value = "http://www.baidu.com";
         document.getElementById("verifyOrderNoUrl").value = "";
